✨ Fix alignments

--- a/style/footer.css
+++ b/style/footer.css
@@ -8,8 +8,8 @@
   width: 100%;
   text-align: center;
   padding: 30px 0;
-  background: black;
-  color: #fff;
+  background: rgb(83, 80, 80);
+  color: rgb(255, 255, 255);
 }
 
 .icons .fa-brands {
@@ -22,4 +22,11 @@
 
 .fa-heart {
   color: #f44336;
+}
+
+@media (prefers-color-scheme: dark) {
+  .footer {
+    background: black;
+    color: white;
+  }
 }
